<?xml version="1.0" encoding="UTF-8" ?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
>
	<modelVersion>4.0.0</modelVersion>

	<licenses>
		<license>
			<name>Mozilla Public License, Version 2.0</name>
			<url>https://www.mozilla.org/en-US/MPL/2.0/</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.13.RELEASE</version>
		<relativePath />
	</parent>

	<groupId>fr.gouv.stopc</groupId>
	<artifactId>robert-server</artifactId>
	<version>0-SNAPSHOT</version>
	<name>robert-server</name>
	<packaging>pom</packaging>
	<description>Projet principal</description>

	<modules>
		<module>robert-server-ws-rest</module>
		<module>robert-server-batch</module>
		<module>robert-server-database</module>
		<module>robert-server-crypto</module>
		<module>robert-server-common</module>
		<module>robert-crypto-grpc-server</module>
		<module>robert-crypto-grpc-server-messaging</module>
		<module>robert-crypto-grpc-server-storage</module>
		<module>robert-server-mobile-app-emulator</module>
		<module>robert-e2e-tests</module>
		<module>robert-server-dataset-injector</module>
	</modules>

	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
		<javax-rs.version>2.1.1</javax-rs.version>
		<grpc.version>1.29.0</grpc.version>
		<protobuf.version>3.11.0</protobuf.version>
		<error_prone_annotations.version>2.3.4</error_prone_annotations.version>
		<postgresql.version>42.2.12</postgresql.version>
		<bountycastle.version>1.65</bountycastle.version>
		<spring-cloud.version>Hoxton.SR5</spring-cloud.version>
		<io.jsonwebtoken.version>0.11.2</io.jsonwebtoken.version>
		<junit-jupiter.version>5.7.1</junit-jupiter.version>
		<logcaptor.version>2.6.1</logcaptor.version>
		<mockito.version>3.7.0</mockito.version>
		<prometheus-pushgateway.version>0.9.0</prometheus-pushgateway.version>
		<log4j2.version>2.17.0</log4j2.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.batch</groupId>
			<artifactId>spring-batch-test</artifactId>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<version>1</version>
			</dependency>

			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>2.0.1.Final</version>
			</dependency>

			<dependency>
				<groupId>javax.ws.rs</groupId>
				<artifactId>javax.ws.rs-api</artifactId>
				<version>${javax-rs.version}</version>
			</dependency>

			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-bom</artifactId>
				<version>${grpc.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-java-util</artifactId>
				<version>${protobuf.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.errorprone</groupId>
				<artifactId>error_prone_annotations</artifactId>
				<version>${error_prone_annotations.version}</version>
			</dependency>

			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${postgresql.version}</version>
			</dependency>

			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk15on</artifactId>
				<version>${bountycastle.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.liquibase</groupId>
					<artifactId>liquibase-maven-plugin</artifactId>
					<version>${liquibase.version}</version>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<executions>
						<execution>
							<goals>
								<goal>build-info</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.6.0.1398</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>pl.project13.maven</groupId>
					<artifactId>git-commit-id-plugin</artifactId>
					<version>2.2.4</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.7</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.owasp</groupId>
					<artifactId>dependency-check-maven</artifactId>
					<version>6.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.9.0.2155</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>com.rudikershaw.gitbuildhook</groupId>
				<artifactId>git-build-hook-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<gitConfig>
						<core.hooksPath>.etc/git-hooks</core.hooksPath>
					</gitConfig>
				</configuration>
				<executions>
					<execution>
						<inherited>false</inherited>
						<goals>
							<goal>configure</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.11.1</version>
				<configuration>
					<ratchetFrom>7ce5d21af5410159743da75c1429497518ab735d</ratchetFrom>
					<java>
						<importOrder>
							<file>.etc/eclipse.importorder</file>
						</importOrder>
						<removeUnusedImports />
						<eclipse>
							<file>.etc/eclipse-formatter-java.xml</file>
						</eclipse>
					</java>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<configuration>
					<rules>
						<requireReleaseDeps>
							<message>No Snapshots Allowed!</message>
						</requireReleaseDeps>
					</rules>
					<fail>false</fail>
				</configuration>
				<executions>
					<execution>
						<id>enforce-no-snapshots</id>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<activation>
				<property>
					<name>git.tag</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-enforcer-plugin</artifactId>
						<configuration>
							<fail>true</fail>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>gitlab-maven</id>
			<url>https://gitlab.inria.fr/api/v4/projects/20766/packages/maven</url>
		</repository>
	</repositories>

    <distributionManagement>
        <repository>
            <id>gitlab-maven</id>
	    	<url>https://gitlab.inria.fr/api/v4/projects/20766/packages/maven</url>
        </repository>
        <snapshotRepository>
            <id>gitlab-maven</id>
	    	<url>https://gitlab.inria.fr/api/v4/projects/20766/packages/maven</url>
        </snapshotRepository>
    </distributionManagement>


	<scm>
		<connection>
			scm:git:git@gitlab.inria.fr:stopcovid19/robert-server.git
		</connection>
		<developerConnection>
			scm:git:git@gitlab.inria.fr:stopcovid19/robert-server.git
		</developerConnection>
		<url>https://gitlab.inria.fr/stopcovid19/robert-server</url>
		<tag>HEAD</tag>
	</scm>

</project>
